# NotionTelegramAIBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/agent/: graph.py  memory.py  permissions.py  persona.py  state.py
src/agent/tools/: notion_tools.py
src/bot/: bot.py  keyboards.py  pending_state.py  utils.py
src/bot/handlers/: admin.py  callback.py  callback_actions.py  callback_db.py  callback_nav.py  message.py  rules.py  start.py  voice.py
src/bot/middleware/: auth.py
src/core/: __init__.py  platform.py  protocols.py
src/db/: database.py
src/notion/: client.py  discovery.py  formatting.py  models.py  operations.py  query_builder.py  users.py
src/voice/: stt.py  tts.py
tests/: conftest.py  test_agent_tools.py  test_database.py  test_notion_models.py  test_permissions.py  test_query_builder.py  test_utils.py
