[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "tele-notion-ai"
version = "0.1.0"
description = "Telegram bot with AI agent for Notion database management"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4.0",
    "openai>=1.50,<2.0",
    "langgraph>=0.2,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "notion-client>=2.2,<3.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "aiosqlite>=0.20,<1.0",
    "aiohttp>=3.10,<4.0",
    "aiofiles>=24.1,<25.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
